--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,17 +5,13 @@
 </head>
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
-<form action="users" method="POST">
-    <select name="role">
+<form action="users" method="post">
+    <select name="userID">
         <option value="0" >User</option>
         <option value="1" selected>Admin</option>
     </select>
     <input type="submit"/>
 </form>
 <hr>
-<ul>
-    <li><a href="users">Users</a></li>
-    <!--<li><a href="meals">Meals</a></li>-->
-</ul>
 </body>
 </html>
