--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,8 @@
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <form action="users" method="post">
     <select name="userID">
-        <option value="0" >User</option>
-        <option value="1" selected>Admin</option>
+        <option value="0" selected>User</option>
+        <option value="1" >Admin</option>
     </select>
     <input type="submit"/>
 </form>
